Add service-to-service messages API.
